--- a/force-app/main/default/layouts/Tenant__c-Tenant Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Tenant__c-Tenant Layout.layout-meta.xml
@@ -168,6 +168,11 @@
             <sortOrder>14</sortOrder>
         </platformActionListItems>
         <platformActionListItems>
+            <actionName>NewOpportunity</actionName>
+            <actionType>QuickAction</actionType>
+            <sortOrder>15</sortOrder>
+        </platformActionListItems>
+        <platformActionListItems>
             <actionName>RecordShareHierarchy</actionName>
             <actionType>StandardButton</actionType>
             <sortOrder>16</sortOrder>
